Closed Bug 162648 Opened 22 years ago Closed 22 years ago

Form in TABLE/TR does not submit

Categories

(Core :: DOM: Core & HTML, defect)

x86
All
defect
Not set
blocker

Tracking

()

VERIFIED FIXED

People

(Reporter: bryner, Assigned: john)

References

()

Details

(Keywords: regression, smoketest)

Attachments

(2 files)

Using a current trunk build from CVS on Windows 2000:

1. Visit http://m-w.com/
2. Type a work in the dictionary textfield
3. Click "Look it up"

Result: nothing happens
Expected result: form should submit

I think this regressed sometime fairly recently, but I'm not sure exactly when.
Works fine in Mozilla 1.1 beta (2002072204)... we need some more testing to
figure out exactly when this regressed.
Keywords: regression
Work fine on Moz BuildID# 2002-08-13-04.  What's your build id when the form
submission failed?
Another form that doesn't submit in 2002-08-14-08 Linux:
  http://gathering.tweakers.net/forum/login

Works in 1.1b.
OS: Windows 2000 → All
Both forms regressed on Linux between the nightly trunk builds
2002-08-13-08-trunk (worked) and 2002-08-14-04-trunk (failed).
Verified.
Works with 0813 build on win2K, but fail with 0814 build.
more seriously,
when view source for that url,
 0814 build mozilla will hang.

change severity to critical.

I check the cvs checkin log, may fix of 162502 cause this regression.
add bz to cc list
Severity: major → critical
Attached file Minimized Testcase
This is a problem of <table><tr><form><td><input></td></form></tr></table>. 
Much more likely a regression of 159359, though form.elements and the input's
.form are both set correctly!

Works on the 10th, doesn't work as of today / yesterday.
The regression is that forms in TABLE/TR no longer have a frame.  The root
problem is that nsPresShell::HandleEventWithTarget inexplicably doesn't send an
event if there is no frame.
Assignee: rods → jkeiser
Component: HTML Form Controls → Form Submission
Summary: Unable to submit form → Form in TABLE/TR does not submit
Status: NEW → ASSIGNED
*** Bug 162722 has been marked as a duplicate of this bug. ***
*** Bug 162830 has been marked as a duplicate of this bug. ***
*** Bug 162834 has been marked as a duplicate of this bug. ***
*** Bug 162835 has been marked as a duplicate of this bug. ***
*** Bug 162881 has been marked as a duplicate of this bug. ***
Shouldn't this be a blocker? It prevents logon to Yahoo!, AOL, and Slashdot; it
prevents the use of sites like weather.com, m-w.com, etc.; and you can't even
use the search function right at the top of netscape.com.
Also seems to prevent bugzilla login - this is too ridiculous - changing
severity to blocker.
Severity: critical → blocker
I tested a bunch of Win98 builds on "http://www.mail.com/" which I think is the
same problem.
I do not know what -1.0, -1.1, and -trunk builds are but I assumed they are
branches and I chose only -trunk builds.
The problem first appears in the 2002-08-14-09-trunk build.


http://ftp34.newaol.com/pub/mozilla/nightly/2002-08-09-08-trunk/mozilla-win32-installer-sea.exe
works

http://ftp34.newaol.com/pub/mozilla/nightly/2002-08-09-17-trunk/mozilla-win32-installer-sea.exe
MOZILLA caused an invalid page fault in
module <unknown> at 0000:4a56f367.

http://ftp34.newaol.com/pub/mozilla/nightly/2002-08-09-18-trunk/mozilla-win32-installer-sea.exe
works

http://ftp34.newaol.com/pub/mozilla/nightly/2002-08-13-04-trunk/mozilla-win32-installer-sea.exe
works

http://ftp34.newaol.com/pub/mozilla/nightly/2002-08-14-09-trunk/mozilla-win32-installer-sea.exe
fails
http://linuxnewbie.org/forum/usercp.php?s=e3c40190e4d859c599e8074a9ee2bfec login
button doesnt wprk too using Mozilla 2002081600 on Linux
nsPresShell::HandleEventWithTarget handles both content and frame event
dispatch.  The lack of dispatch is due to a null check which has always been
valid before.  The code could be rewritten to handle content which has no frame
but the null check is currently protecting code which assumes the frame is there.

The easier patch will likely be to use nsPresShell::HandleDOMEventWithTarget
which dispatches to content only.  I'm pulling a new tree now to check this out in.
If this indeed blocks login to bugzilla then it is a smoketest blocker.
Keywords: smoketest
Attached patch Proposed patchSplinter Review
Okay, I have a patch which fixes this.	I tested most of the dupes and it works
fine.  Someone mentioned a problem with bugzilla login and I have not had a
problem with that with or without the patch.  If that's real then its something
else.
Comment on attachment 95478 [details] [diff] [review]
Proposed patch

sr=jst
Attachment #95478 - Flags: superreview+
Comment on attachment 95478 [details] [diff] [review]
Proposed patch

r=bzbarsky
Attachment #95478 - Flags: review+
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 163016 has been marked as a duplicate of this bug. ***
Is this fixed on 2002081508 (which still seems to be the most recent one I can
get).  If so, then there's another similar bug when trying to bid on items on
ebay...
*** Bug 163055 has been marked as a duplicate of this bug. ***
The fixed comment is from "2002-08-15 16:43"

This is about 8 hours after "2002081508" (which is "2002-08-15 08:00" or so).
*** Bug 163149 has been marked as a duplicate of this bug. ***
*** Bug 163209 has been marked as a duplicate of this bug. ***
*** Bug 163296 has been marked as a duplicate of this bug. ***
*** Bug 163347 has been marked as a duplicate of this bug. ***
verifying on build 2002-08-23-08-trunk
Status: RESOLVED → VERIFIED
*** Bug 148806 has been marked as a duplicate of this bug. ***
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: