Fix for bug 162648, Call HandleDOMEventWithTarget when sending submit event since only DOM processing is required.  sr:jst, r:bzbarsky