content/html/content/src/nsHTMLInputElement.cpp
@@ -1714,8 +1714,7 @@ nsHTMLInputElement::HandleDOMEvent(nsIPresContext* aPresContext,
               // bug 125624.
               if (presShell) {
                 nsCOMPtr<nsIContent> form(do_QueryInterface(mForm));
-                presShell->HandleEventWithTarget(&event, nsnull, form, 
-                                                 NS_EVENT_FLAG_INIT, &status);
+                presShell->HandleDOMEventWithTarget(form, &event, &status);
               }
             }
             break;
